GNOME Bugzilla – Bug 699015
Touchpad pointer speed istn't saved
Last modified: 2013-06-03 07:39:59 UTC
The setted pointer speed is lost after switching back to settings overview.
Created attachment 242639 [details] Shows the above descripted behavior
It is saved, it's not restored though.
Created attachment 243037 [details] [review] restore pointer speed
Review of attachment 243037 [details] [review]: Looks good for 3.8 and master
It has been commited to both branches.
*** Bug 699502 has been marked as a duplicate of this bug. ***
*** Bug 699962 has been marked as a duplicate of this bug. ***
*** Bug 701489 has been marked as a duplicate of this bug. ***