mouse: Restore mouse and touchpad pointer speed

https://bugzilla.gnome.org/show_bug.cgi?id=699015